--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,12 +1,10 @@
-version: 2
-
 project_name: zeroops
 
 dist: dist
 
 builds:
   - id: zeroops
-    main: ./main.go
+    main: ./cmd/main.go
     binary: zeroops
     goos:
       - linux
@@ -15,6 +13,7 @@ builds:
     goarch:
       - amd64
       - arm64
+    go_binary: '{{ .ProjectName }}{{ if eq .Os "windows" }}.exe{{ end }}'
 
 archives:
   - id: default
@@ -24,7 +23,8 @@ archives:
         format: zip
     files:
       - zeroops*
-
+      - LICENSE
+      - README.md
 
 release:
   github:
@@ -43,3 +43,6 @@ checksum:
 
 snapshot:
   name_template: "snapshot"
+
+# Optional: if you want to build manually without pushing tags
+# run with: goreleaser release --snapshot --clean
